// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cg73n9k soui-divider-wrapper c-i4joj5 soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cg73n9k soui-divider-wrapper c-i4joj5 soui-divider-horizontal cnpysou soui-divider-with-text c-pp3zgt soui-divider-with-text-center"
  >
    <span
      class="c1eegrc soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cg73n9k soui-divider-wrapper c-i4joj5 soui-divider-horizontal cnpysou soui-divider-with-text c-pyrvvf soui-divider-with-text-left"
  >
    <span
      class="c1eegrc soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cg73n9k soui-divider-wrapper c-i4joj5 soui-divider-horizontal cnpysou soui-divider-with-text c-niei9u soui-divider-with-text-right"
  >
    <span
      class="c1eegrc soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
